Regression(r181782): Caused WebKit2.RestoreSessionStateContainingFormData API test to crash https://bugs.webkit.org/show_bug.cgi?id=142911

Reviewed by Antti Koivisto.

Drop the isBackForwardLoadType(m_loadType) assertion in
FrameLoader::retryAfterFailedCacheOnlyMainResourceLoad(). This assertion
used to hold true when goToBackForwardItem() was only called with
history navigation load types. However, after r181782, we use a Standard
load in the cases where we do not wish to display stale content (e.g.
restoring session state).

The assertion comment says "We only use cache-only loads to avoid
resubmitting forms". However, we then call loadDifferentDocumentItem()
which already takes care of using the ReturnCacheDataElseLoad cache
policy as the HistoryItem has form data and we pass
MayNotAttemptCacheOnlyLoadForFormSubmissionItem as parameter.

No new tests, covered by WebKit2.RestoreSessionStateContainingFormData
API test.

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::retryAfterFailedCacheOnlyMainResourceLoad):

Canonical link: https://commits.webkit.org/160936@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181804 268f45cc-cd09-0410-ab3c-d52691b4dbfc